lager-lang/examples/bad/def_after_call.lg
int main() {
    return f(); // compile error
}

int f() {
    return 0;
}
